--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
@@ -1,3 +1,19 @@
 #username {
   width: 40ch;
 }
+
+#email {
+  width: 50ch;
+}
+
+#userCpf {
+  width: 11ch;
+}
+
+#endereco {
+  width: 200ch;
+}
+
+#city {
+  width: 28ch;
+}
