--- a/fundamentos/dia-4-css-flexbox-parte-2/style.css
+++ b/fundamentos/dia-4-css-flexbox-parte-2/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   flex-basis: 286px;
+  order: -1;
 }
 
 .menu-container {
@@ -32,6 +33,7 @@ body {
 }
 
 .menu-container li {
+  display: flex;
   color: white;
   font-weight: 500;
   font-size: 1.3rem;
